--- a/notebooks/archives_spectacle/import_archives.ipynb
+++ b/notebooks/archives_spectacle/import_archives.ipynb
@@ -595,14 +595,18 @@
     "#request the url with id of the organism\n",
     "#Example \n",
     "# https://www.lesarchivesduspectacle.net/?IDX_Organisme=439&Saison=2008\n",
-    "# Arsenal id 439\n",
     "# import the library we use to open URLs\n",
+    "\n",
+    "# 439 Arsenal\n",
+    "# 699 CCAM\n",
+    "# 383 grand theatre \n",
+    "# 1914 CARREAU\n",
     "import urllib.request\n",
     "import re\n",
     "import pandas as pd\n",
     "# import the BeautifulSoup library so we can parse HTML and XML documents\n",
     "from bs4 import BeautifulSoup\n",
-    "organism=\"439\"\n",
+    "organism=\"1914\"\n",
     "saison=\"2016\"\n",
     "# specify which URL/web page we are going to be scraping\n",
     "url = \"https://www.lesarchivesduspectacle.net/?IDX_Organisme=\" + organism + \"&Saison=\" + saison\n",
@@ -675,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,25 +768,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start 2020-07-21 18:16:13.445297\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n",
-      "2018\n",
-      "2019\n",
-      "finish 2020-07-21 18:16:20.477069\n"
+      "start 2020-07-25 17:13:12.137005\n",
+      "finish 2020-07-25 17:13:23.420640\n"
      ]
     }
    ],
@@ -794,7 +788,7 @@
     "print(\"start\",datetime.now()) \n",
     "# 439 Arsenal\n",
     "# 699 CCAM [Centre culturel André Malraux] - Scène Nationale de Vandoeuvre-lès-Nancy\n",
-    "organismId=\"439\"\n",
+    "organismId=\"383\"\n",
     "# 1744 Pôle sud\n",
     "# 465 Le Manège de Reims\n",
     "# 1914 Carreau forbach  \n",
@@ -814,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +818,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-fabe50aef156>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m                     \u001b[0mplace\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0mcolumn_marker\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m         \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'spectacleId'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mspectacleId\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'genre'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mgenre\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'duration'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mduration\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'country'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcountry\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# yuck\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m         \u001b[0mgenre\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0mduration\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-b6f90d898481>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m                     \u001b[0mplace\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0mcolumn_marker\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m         \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'spectacleId'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mspectacleId\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'genre'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mgenre\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'duration'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mduration\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'country'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcountry\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# yuck\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m         \u001b[0mgenre\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0mduration\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'genre' is not defined"
      ]
     }
@@ -881,79 +875,81 @@
     "        genre=\"\"\n",
     "        duration=\"\"\n",
     "        country=\"\"\n",
-    "        row_marker += 1\n"
+    "        row_marker += 1\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<table style=\"margin:20px 0 20px 0;\">\n",
-      "<tr>\n",
-      "<td valign=\"top\">Production\r\n",
-      "                </td>\n",
-      "<td valign=\"top\">\n",
-      "<a class=\"c_Organisme b\" href=\"?IDX_Organisme=2092\">Compagnie Dernière Minute</a><span class=\"em09 n\">  (Toulouse)</span>\n",
-      "</td></tr>\n",
-      "</table>\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Durée</th>\n",
+       "      <th>Pays</th>\n",
+       "      <th>spectacleId</th>\n",
+       "      <th>typeDate</th>\n",
+       "      <th>date</th>\n",
+       "      <th>organismeId</th>\n",
+       "      <th>organismeName</th>\n",
+       "      <th>to_analyse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Danse – à partir de 7 ans\\r\\n</td>\n",
+       "      <td>1 heure\\r\\n</td>\n",
+       "      <td>France</td>\n",
+       "      <td>20185</td>\n",
+       "      <td>Création le</td>\n",
+       "      <td>2009-11-03</td>\n",
+       "      <td>?IDX_Organisme=837&amp;Saison=2009</td>\n",
+       "      <td>Maison de la Danse de Lyon</td>\n",
+       "      <td>Création le</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Genre            Durée    Pays spectacleId  \\\n",
+       "0  Danse – à partir de 7 ans\\r\\n      1 heure\\r\\n      France       20185   \n",
+       "\n",
+       "       typeDate        date                     organismeId  \\\n",
+       "0  Création le   2009-11-03  ?IDX_Organisme=837&Saison=2009   \n",
+       "\n",
+       "                organismeName   to_analyse  \n",
+       "0  Maison de la Danse de Lyon  Création le  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import urllib.request\n",
-    "import re\n",
-    "import pandas as pd\n",
-    "# import the BeautifulSoup library so we can parse HTML and XML documents\n",
-    "from bs4 import BeautifulSoup\n",
-    "#spectacleId=\"34525\"\n",
-    "#spectacleId=\"36956\"\n",
-    "spectacleId=\"20185\"\n",
-    "# specify which URL/web page we are going to be scraping\n",
-    "url = \"https://www.lesarchivesduspectacle.net/?IDX_Spectacle=\" + spectacleId\n",
-    "# open the url using urllib.request and put the HTML into the page variable\n",
-    "page = urllib.request.urlopen(url)\n",
-    "# parse the HTML from our URL into the BeautifulSoup parse tree format\n",
-    "soup = BeautifulSoup(page, \"lxml\")\n",
-    "#the div where the information is\n",
-    "#the div where the information is\n",
-    "div_interested = soup.find('div', class_='fiche__footer') \n",
-    "column_label=[]\n",
-    "column_value=[]\n",
-    "for row in div_interested.find_all('table')[0].findAll('tr'):\n",
-    "    th = row.findAll('th')[0].contents[0]\n",
-    "    td = row.findAll('td')[0].contents[0]\n",
-    "    column_label.append(th)\n",
-    "    column_value.append(td)\n",
-    "new_table = pd.DataFrame(columns=column_label, index= [0]) # I know the size\n",
-    "for row in div_interested.find_all('table')[0].findAll('tr'):\n",
-    "    th = row.findAll('th')[0].contents[0]\n",
-    "    td = row.findAll('td')[0].contents[0]\n",
-    "    new_table.at[0,th] = td\n",
-    "new_table[\"spectacleId\"]=spectacleId\n",
-    "#Recuperer creation_date - organism_creation \n",
-    "#the div where the information is\n",
-    "div_spectacle = soup.find('div', id='div_Spectacle')\n",
-    "p_spectacle = div_spectacle.find_all('p')[0]\n",
-    "if(p_spectacle):\n",
-    "    for time in p_spectacle.findAll('time'):\n",
-    "        if time.has_attr('datetime'):\n",
-    "            new_table[\"typeDate\"]=time.previousSibling\n",
-    "            new_table[\"date\"]=time['datetime']\n",
-    "    for organism in p_spectacle.findAll('a',class_ ='c_Organisme'):\n",
-    "        if organism.has_attr('href'):\n",
-    "            new_table[\"organismeId\"]=organism['href']\n",
-    "            new_table[\"organismeName\"]=organism.contents[0].strip()\n",
-    "new_table[\"to_analyse\"]=p_spectacle.contents[0].strip()\n",
-    "new_table\n",
-    "#table[0] class=\"f-spectacle__equipe\"    table[1]  class=\"f-spectacle__equipe\"  \n",
-    "table_production = div_spectacle.find_all('table')[2]\n",
-    "print(table_production)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
