--- a/notebooks/archives_spectacle/import_performance_info.ipynb
+++ b/notebooks/archives_spectacle/import_performance_info.ipynb
@@ -2,35 +2,363 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Durée</th>\n",
+       "      <th>Pays</th>\n",
+       "      <th>spectacleId</th>\n",
+       "      <th>typeDate</th>\n",
+       "      <th>date</th>\n",
+       "      <th>organismeId</th>\n",
+       "      <th>organismeName</th>\n",
+       "      <th>to_analyse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Danse – à partir de 7 ans\\r\\n</td>\n",
+       "      <td>1 heure\\r\\n</td>\n",
+       "      <td>France</td>\n",
+       "      <td>20185</td>\n",
+       "      <td>Création le</td>\n",
+       "      <td>2009-11-03</td>\n",
+       "      <td>?IDX_Organisme=837&amp;Saison=2009</td>\n",
+       "      <td>Maison de la Danse de Lyon</td>\n",
+       "      <td>Création le</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Genre            Durée    Pays spectacleId  \\\n",
+       "0  Danse – à partir de 7 ans\\r\\n      1 heure\\r\\n      France       20185   \n",
+       "\n",
+       "       typeDate        date                     organismeId  \\\n",
+       "0  Création le   2009-11-03  ?IDX_Organisme=837&Saison=2009   \n",
+       "\n",
+       "                organismeName   to_analyse  \n",
+       "0  Maison de la Danse de Lyon  Création le  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import urllib.request\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "# import the BeautifulSoup library so we can parse HTML and XML documents\n",
+    "from bs4 import BeautifulSoup\n",
+    "#spectacleId=\"34525\"\n",
+    "#spectacleId=\"36956\"\n",
+    "spectacleId=\"20185\"\n",
+    "# specify which URL/web page we are going to be scraping\n",
+    "url = \"https://www.lesarchivesduspectacle.net/?IDX_Spectacle=\" + spectacleId\n",
+    "# open the url using urllib.request and put the HTML into the page variable\n",
+    "page = urllib.request.urlopen(url)\n",
+    "# parse the HTML from our URL into the BeautifulSoup parse tree format\n",
+    "soup = BeautifulSoup(page, \"lxml\")\n",
+    "#the div where the information is\n",
+    "#the div where the information is\n",
+    "div_interested = soup.find('div', class_='fiche__footer') \n",
+    "column_label=[]\n",
+    "column_value=[]\n",
+    "for row in div_interested.find_all('table')[0].findAll('tr'):\n",
+    "    th = row.findAll('th')[0].contents[0]\n",
+    "    td = row.findAll('td')[0].contents[0]\n",
+    "    column_label.append(th)\n",
+    "    column_value.append(td)\n",
+    "new_table = pd.DataFrame(columns=column_label, index= [0]) # I know the size\n",
+    "for row in div_interested.find_all('table')[0].findAll('tr'):\n",
+    "    th = row.findAll('th')[0].contents[0]\n",
+    "    td = row.findAll('td')[0].contents[0]\n",
+    "    new_table.at[0,th] = td\n",
+    "new_table[\"spectacleId\"]=spectacleId\n",
+    "#Recuperer creation_date - organism_creation \n",
+    "#the div where the information is\n",
+    "div_spectacle = soup.find('div', id='div_Spectacle')\n",
+    "p_spectacle = div_spectacle.find_all('p')[0]\n",
+    "if(p_spectacle):\n",
+    "    for time in p_spectacle.findAll('time'):\n",
+    "        if time.has_attr('datetime'):\n",
+    "            new_table[\"typeDate\"]=time.previousSibling\n",
+    "            new_table[\"date\"]=time['datetime']\n",
+    "    for organism in p_spectacle.findAll('a',class_ ='c_Organisme'):\n",
+    "        if organism.has_attr('href'):\n",
+    "            new_table[\"organismeId\"]=organism['href']\n",
+    "            new_table[\"organismeName\"]=organism.contents[0].strip()\n",
+    "new_table[\"to_analyse\"]=p_spectacle.contents[0].strip()\n",
+    "new_table\n",
+    "#table[0] class=\"f-spectacle__equipe\"    table[1]  class=\"f-spectacle__equipe\"  \n",
+    "#table_production = div_spectacle.find_all('table')[2]\n",
+    "#print(table_production)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "#Question qui fait le plus de coproductions?\n",
+    "df_coproduction = pd.DataFrame(columns=['performanceId', 'isArsenalCopro', 'isCarreauCopro', 'isCCAMCopro','isGrandTheatreCopro' ])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>performanceId</th>\n",
+       "      <th>type_aide</th>\n",
+       "      <th>organism</th>\n",
+       "      <th>organismId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Coproduction</td>\n",
+       "      <td>L'Arsenal de Metz  (Metz)</td>\n",
+       "      <td>439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Coproduction</td>\n",
+       "      <td>Ballet de Lorraine  (Nancy)</td>\n",
+       "      <td>1798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Coproduction</td>\n",
+       "      <td>Le Carreau  (Forbach)</td>\n",
+       "      <td>1914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Coproduction</td>\n",
+       "      <td>FRAC Lorraine  (Metz)</td>\n",
+       "      <td>12533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Coproduction</td>\n",
+       "      <td>ICI - CCN Montpellier  (Montpellier)</td>\n",
+       "      <td>40842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Coproduction</td>\n",
+       "      <td>La Maison CDCN  (Uzès)</td>\n",
+       "      <td>50763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Coproduction</td>\n",
+       "      <td>Scènes croisées de Lozère  (Mende)</td>\n",
+       "      <td>793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Coproduction</td>\n",
+       "      <td>Le Vent des Forêts  (Fresnes-au-Mont)</td>\n",
+       "      <td>26625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Aide</td>\n",
+       "      <td>Région Grand Est  (Strasbourg)</td>\n",
+       "      <td>44746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Aide</td>\n",
+       "      <td>DRAC Grand Est  (Strasbourg)</td>\n",
+       "      <td>44731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>90517</td>\n",
+       "      <td>Aide</td>\n",
+       "      <td>Ville de Nancy</td>\n",
+       "      <td>4443</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   performanceId     type_aide                               organism  \\\n",
+       "0          90517  Coproduction              L'Arsenal de Metz  (Metz)   \n",
+       "1          90517  Coproduction            Ballet de Lorraine  (Nancy)   \n",
+       "2          90517  Coproduction                  Le Carreau  (Forbach)   \n",
+       "3          90517  Coproduction                  FRAC Lorraine  (Metz)   \n",
+       "4          90517  Coproduction   ICI - CCN Montpellier  (Montpellier)   \n",
+       "5          90517  Coproduction                 La Maison CDCN  (Uzès)   \n",
+       "6          90517  Coproduction     Scènes croisées de Lozère  (Mende)   \n",
+       "7          90517  Coproduction  Le Vent des Forêts  (Fresnes-au-Mont)   \n",
+       "8          90517          Aide         Région Grand Est  (Strasbourg)   \n",
+       "9          90517          Aide           DRAC Grand Est  (Strasbourg)   \n",
+       "10         90517          Aide                         Ville de Nancy   \n",
+       "\n",
+       "   organismId  \n",
+       "0         439  \n",
+       "1        1798  \n",
+       "2        1914  \n",
+       "3       12533  \n",
+       "4       40842  \n",
+       "5       50763  \n",
+       "6         793  \n",
+       "7       26625  \n",
+       "8       44746  \n",
+       "9       44731  \n",
+       "10       4443  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pour un spectacle voir les coproductions\n",
+    "#https://www.lesarchivesduspectacle.net/?IDX_Spectacle=90517#spectacle-partenaires-de-production\n",
+    "#Perchée dans les arbres 8 coproductions \n",
+    "\n",
+    "import urllib.request\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "# import the BeautifulSoup library so we can parse HTML and XML documents\n",
+    "from bs4 import BeautifulSoup\n",
+    "#spectacleId=\"34525\"\n",
+    "#spectacleId=\"36956\"\n",
+    "spectacleId=\"90517\"\n",
+    "# specify which URL/web page we are going to be scraping\n",
+    "url = \"https://www.lesarchivesduspectacle.net/?IDX_Spectacle=\" + spectacleId +\"#spectacle-partenaires-de-production\"\n",
+    "# open the url using urllib.request and put the HTML into the page variable\n",
+    "page = urllib.request.urlopen(url)\n",
+    "# parse the HTML from our URL into the BeautifulSoup parse tree format\n",
+    "soup = BeautifulSoup(page, \"lxml\")\n",
+    "#the div where the information is\n",
+    "#the div where the information is\n",
+    "table = soup.find('table', class_='f-spectacle__production-bis') \n",
+    "# Down below we'll add our inmates to this list\n",
+    "inmates_list = []\n",
+    "\n",
+    "# BeautifulSoup provides nice ways to access the data in the parsed\n",
+    "# page. Here, we'll use the select method and pass it a CSS style\n",
+    "# selector to grab all the rows in the table (the rows contain the \n",
+    "# inmate names and ages).\n",
+    "\n",
+    "for table_row in table.find_all('tr'):\n",
+    "    # Each tr (table row) has three td HTML elements (most people \n",
+    "    # call these table cels) in it (first name, last name, and age)\n",
+    "    cells = table_row.findAll('td')\n",
+    "    # Our table has one exception -- a row without any cells.\n",
+    "    # Let's handle that special case here by making sure we\n",
+    "    # have more than zero cells before processing the cells\n",
+    "    if len(cells) > 0:\n",
+    "        organism = cells[1].text.strip()\n",
+    "        organism_element = cells[1].find('a',class_='c_Organisme b')\n",
+    "        organismId = organism_element['href'].replace(\"?IDX_Organisme=\",\"\")\n",
+    "        type_aide = cells[0].text.strip()\n",
+    "        if(type_aide != ''):\n",
+    "            type_aide_master = type_aide\n",
+    "        \n",
+    "        else:\n",
+    "            type_aide = type_aide_master\n",
+    "        inmate = {'performanceId': spectacleId,'type_aide': type_aide,'organism': organism,'organismId': organismId}\n",
+    "        inmates_list.append(inmate)\n",
+    "\n",
+    "df = pd.DataFrame(inmates_list)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
