--- a/notebooks/archives_spectacle/question_production_spectacle.ipynb
+++ b/notebooks/archives_spectacle/question_production_spectacle.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Partenaires de production"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pour un spectacleId voir les coproductions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -157,8 +171,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fonction qui retourne les types d'aide "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,45 +233,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0        int64\n",
-       "organism_id       int64\n",
-       "year              int64\n",
-       "performance      object\n",
-       "performanceId     int64\n",
-       "author           object\n",
-       "authordId         int64\n",
-       "label            object\n",
-       "period           object\n",
-       "occurency        object\n",
-       "place            object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "## Génération des types d'aide pour un organisme donné"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start 2020-07-26 11:28:28.638510\n",
-      "finish 2020-07-26 11:32:26.845880\n"
+      "start 2020-07-26 18:04:57.251609\n",
+      "finish 2020-07-26 18:09:06.952247\n"
      ]
     }
    ],
@@ -264,8 +263,8 @@
     "import time\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
-    "organismId=\"439\"\n",
-    "csv_file_path = \"all_10_years_organism_439.csv\"\n",
+    "organismId=\"383\"\n",
+    "csv_file_path = \"all_10_years_organism_383.csv\"\n",
     "df_organism = pd.read_csv(csv_file_path)\n",
     "df = pd.DataFrame(columns=['performanceId','type_aide','organism','organismId'])                        \n",
     "print(\"start\",datetime.now()) \n",
@@ -283,26 +282,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "saison\n",
-       "2010.0    1\n",
-       "2011.0    6\n",
-       "2012.0    4\n",
-       "2013.0    2\n",
-       "2014.0    4\n",
-       "2015.0    1\n",
-       "2016.0    1\n",
-       "2017.0    3\n",
-       "2018.0    3\n",
+       "2010.0     1\n",
+       "2011.0     5\n",
+       "2012.0    12\n",
+       "2013.0     5\n",
+       "2014.0     2\n",
+       "2015.0     2\n",
+       "2016.0     1\n",
+       "2018.0     3\n",
+       "2019.0     2\n",
        "Name: performanceId, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,12 +310,12 @@
     "import time\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
-    "csv_file_path = \"all_10_years_organism_439_type_production.csv\"\n",
+    "csv_file_path = \"all_10_years_organism_383_type_production.csv\"\n",
     "df_type_production = pd.read_csv(csv_file_path)\n",
     "\n",
     "df_type_production = df_type_production[df_type_production['type_aide'] == 'Coproduction']\n",
     "#where coproduction est Arsenal\n",
-    "df_type_production = df_type_production[df_type_production['organismId'] == 439.0]\n",
+    "df_type_production = df_type_production[df_type_production['organismId'] == 383.0]\n",
     "df_type_production.groupby([\"saison\"]).performanceId.count()"
    ]
   },
@@ -346,6 +345,20 @@
     }
    ],
    "source": [
+    "#Coproduction arsenal\n",
+    "#saison\n",
+    "#2010.0    1\n",
+    "#2011.0    6\n",
+    "#2012.0    4\n",
+    "#2013.0    2\n",
+    "#2014.0    4\n",
+    "#2015.0    1\n",
+    "#2016.0    1\n",
+    "#2017.0    3\n",
+    "#2018.0    3\n",
+    "\n",
+    "\n",
+    "\n",
     "#2010    17\n",
     "#2011    19\n",
     "#2012    15\n",
@@ -366,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +391,7 @@
        "Name: type_aide, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,58 +404,30 @@
     "df_type_production = pd.read_csv(csv_file_path)\n",
     "#where organism is Arsenal\n",
     "df_type_production = df_type_production[df_type_production['organismId'] == 439.0]\n",
-    "df_type_production.type_aide.value_counts()\n"
+    "df_type_production.type_aide.value_counts()\n",
+    "#df_type_production.nunique()\n",
+    "#df_type_production "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0       1058\n",
-       "performanceId     192\n",
-       "type_aide           9\n",
-       "organism          535\n",
-       "organismId        533\n",
-       "saison             10\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df_type_production.nunique()"
+    "## Moyenne de coproduction par spectacle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Unnamed: 0       223\n",
-       "organism_id        1\n",
-       "year              10\n",
-       "performance      193\n",
-       "performanceId    193\n",
-       "author           141\n",
-       "authordId        142\n",
-       "label            199\n",
-       "period           158\n",
-       "occurency          9\n",
-       "place             11\n",
-       "dtype: int64"
+       "4.486111111111111"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,10 +436,70 @@
     "import time\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
-    "csv_file_path = \"all_10_years_organism_439.csv\"\n",
-    "df_arsenal_10_years = pd.read_csv(csv_file_path)\n",
-    "df_arsenal_10_years.nunique()"
+    "csv_file_path = \"all_10_years_organism_439_type_production.csv\"\n",
+    "df_type_production = pd.read_csv(csv_file_path)\n",
+    "#where organism is Arsenal\n",
+    "#df_type_production = df_type_production[df_type_production['organismId'] == 383.0]\n",
+    "#df_type_production.type_aide.value_counts()\n",
+    "#df_type_production.nunique()\n",
+    "#df_type_production.nunique()\n",
+    "#df_type_production.type_aide.value_counts()\n",
+    "\n",
+    "#df_type_production.set_index(['performanceId'], drop=True, inplace=True)\n",
+    "#df_type_production.groupby([\"type_aide\"]).type_aide.count().sort_values(ascending=False)\n",
+    "\n",
+    "\n",
+    "df_type_production = df_type_production[df_type_production['type_aide'] == 'Coproduction']\n",
+    "#df_type_production.groupby([\"performanceId\"]).type_aide.count().sort_values(ascending=False)\n",
+    "\n",
+    "df_type_production.groupby([\"performanceId\"]).type_aide.count().mean()\n",
+    "##33 performance en coproduction faite par l'institution passée en paramètre sur 476 performances Luxembourg\n",
+    "## 6 performance en coproduction 192  Arsenal \n",
+    "\n",
+    "#moyenne de coprodcutuion 4.48\n",
+    "#moyenne de coprodcutuion si Arsenael faut selectionner les performanceId si organismId == arsenal\n",
+    "# et ces performznceId les sélectionner dans dataframe origiine et group by \n",
+    "\n",
+    "#df_type_production.nunique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0       38\n",
+       "performanceId    38\n",
+       "type_aide         0\n",
+       "organism          0\n",
+       "organismId        0\n",
+       "saison            9\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "csv_file_path = \"all_10_years_organism_439_type_production.csv\"\n",
+    "df_type_production = pd.read_csv(csv_file_path)\n",
+    "df_type_production[df_type_production['type_aide'].isnull().values].nunique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -481,6 +526,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "288px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
