export nb dancers

--- a/notebooks/archives_spectacle/import_archives.ipynb
+++ b/notebooks/archives_spectacle/import_archives.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#For one organism and one year"
+    "# Pour un organisme et une année"
    ]
   },
   {
@@ -678,6 +676,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fonction pour un organisme et une saison"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -764,6 +769,13 @@
     "        return df\n",
     "    except urllib.error.URLError as e:\n",
     "        print(e.reason + \"for organismId \"  + organismId + \" saison \" + saison)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appel de la fonction pour la période souhaitée"
    ]
   },
   {
@@ -988,6 +1000,19 @@
     },
     "source": []
    }
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
