--- a/notebooks/archives_spectacle/question_production_spectacle.ipynb
+++ b/notebooks/archives_spectacle/question_production_spectacle.ipynb
@@ -189,7 +189,7 @@
     "# import the BeautifulSoup library so we can parse HTML and XML documents\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "\n",
+    "import socket\n",
     "\n",
     "def import_df_type_production(spectacleId,saison):\n",
     "    # specify which URL/web page we are going to be scraping\n",
