--- a/notebooks/archives_spectacle/question_production_spectacle.ipynb
+++ b/notebooks/archives_spectacle/question_production_spectacle.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,16 +240,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arsenal"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start 2020-07-26 18:04:57.251609\n",
-      "finish 2020-07-26 18:09:06.952247\n"
+      "start 2020-08-23 13:21:36.771744\n",
+      "finish 2020-08-23 13:22:32.446713\n"
      ]
     }
    ],
@@ -263,8 +270,8 @@
     "import time\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
-    "organismId=\"383\"\n",
-    "csv_file_path = \"all_10_years_organism_383.csv\"\n",
+    "organismId=\"439\"\n",
+    "csv_file_path = os.getcwd() + \"/data/all_10_years_organism_\"+ organismId + \"_danse.csv\"\n",
     "df_organism = pd.read_csv(csv_file_path)\n",
     "df = pd.DataFrame(columns=['performanceId','type_aide','organism','organismId'])                        \n",
     "print(\"start\",datetime.now()) \n",
@@ -275,10 +282,69 @@
     "            df=df.append(import_df_type_production(str(row.performanceId),row.year),sort=False,ignore_index=True)\n",
     "        except Exception as err:\n",
     "            continue\n",
-    "df.to_csv('all_10_years_organism_' + organismId + '_type_production.csv')\n",
+    "df.to_csv(os.getcwd() + \"/data/all_10_years_organism_\" + organismId + \"_type_production_danse.csv\")\n",
     "\n",
     "print(\"finish\",datetime.now())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CCAM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start 2020-08-23 13:24:42.663685\n",
+      "finish 2020-08-23 13:25:24.325984\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import os\n",
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "organismId=\"699\"\n",
+    "csv_file_path = os.getcwd() + \"/data/all_10_years_organism_\"+ organismId + \"_danse.csv\"\n",
+    "df_organism = pd.read_csv(csv_file_path)\n",
+    "df = pd.DataFrame(columns=['performanceId','type_aide','organism','organismId'])                        \n",
+    "print(\"start\",datetime.now()) \n",
+    "for row in df_organism.itertuples():\n",
+    "    if (row.performanceId!=0):\n",
+    "        #call the function to have the type_aide and orgnaism\n",
+    "        try:\n",
+    "            df=df.append(import_df_type_production(str(row.performanceId),row.year),sort=False,ignore_index=True)\n",
+    "        except Exception as err:\n",
+    "            continue\n",
+    "df.to_csv(os.getcwd() + \"/data/all_10_years_organism_\" + organismId + \"_type_production_danse.csv\")\n",
+    "\n",
+    "print(\"finish\",datetime.now())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start 2020-08-23 13:01:25.401347\n",
+      "finish 2020-08-23 13:01:25.407538\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -495,18 +561,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DRAC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DRAC Arsenal"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "organismId=\"439\"\n",
+    "csv_file_path = os.getcwd() + \"/data/all_10_years_organism_\" + organismId + \"_type_production_danse.csv\"\n",
+    "df_type_production = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "df_type_production = df_type_production[df_type_production['type_aide'] == 'Soutien']\n",
+    "#where coproduction est Arsenal\n",
+    "#df_type_production = df_type_production[df_type_production['organismId'] == 383.0]\n",
+    "#df_type_production.groupby([\"saison\"]).performanceId.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>performanceId</th>\n",
+       "      <th>type_aide</th>\n",
+       "      <th>organism</th>\n",
+       "      <th>organismId</th>\n",
+       "      <th>saison</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>143</td>\n",
+       "      <td>29203</td>\n",
+       "      <td>Soutien</td>\n",
+       "      <td>DRAC Lorraine  (Metz)</td>\n",
+       "      <td>712.0</td>\n",
+       "      <td>2012.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>150</td>\n",
+       "      <td>46999</td>\n",
+       "      <td>Soutien</td>\n",
+       "      <td>DRAC Lorraine  (Metz)</td>\n",
+       "      <td>712.0</td>\n",
+       "      <td>2012.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>170</td>\n",
+       "      <td>52149</td>\n",
+       "      <td>Soutien</td>\n",
+       "      <td>DRAC Lorraine  (Metz)</td>\n",
+       "      <td>712.0</td>\n",
+       "      <td>2013.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>255</td>\n",
+       "      <td>59853</td>\n",
+       "      <td>Soutien</td>\n",
+       "      <td>DRAC Lorraine  (Metz)</td>\n",
+       "      <td>712.0</td>\n",
+       "      <td>2014.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>328</td>\n",
+       "      <td>60050</td>\n",
+       "      <td>Soutien</td>\n",
+       "      <td>DRAC Lorraine  (Metz)</td>\n",
+       "      <td>712.0</td>\n",
+       "      <td>2015.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429</th>\n",
+       "      <td>429</td>\n",
+       "      <td>74341</td>\n",
+       "      <td>Soutien</td>\n",
+       "      <td>DRAC Lorraine  (Metz)</td>\n",
+       "      <td>712.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  performanceId type_aide               organism  organismId  \\\n",
+       "143         143          29203   Soutien  DRAC Lorraine  (Metz)       712.0   \n",
+       "150         150          46999   Soutien  DRAC Lorraine  (Metz)       712.0   \n",
+       "170         170          52149   Soutien  DRAC Lorraine  (Metz)       712.0   \n",
+       "255         255          59853   Soutien  DRAC Lorraine  (Metz)       712.0   \n",
+       "328         328          60050   Soutien  DRAC Lorraine  (Metz)       712.0   \n",
+       "429         429          74341   Soutien  DRAC Lorraine  (Metz)       712.0   \n",
+       "\n",
+       "     saison  \n",
+       "143  2012.0  \n",
+       "150  2012.0  \n",
+       "170  2013.0  \n",
+       "255  2014.0  \n",
+       "328  2015.0  \n",
+       "429  2016.0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_type_production[df_type_production['organismId'].isin(['712.0','44731.0'])]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#DRAC Lorraine IDX_Organisme=712\n",
+    "#DRAC Grand Est IDX_Organisme=44731"
+   ]
   }
  ],
  "metadata": {
