--- a/notebooks/archives_spectacle/import_archives.ipynb
+++ b/notebooks/archives_spectacle/import_archives.ipynb
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,27 +780,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start 2020-07-25 17:13:12.137005\n",
-      "finish 2020-07-25 17:13:23.420640\n"
+      "start 2020-08-24 18:45:45.641489\n",
+      "finish 2020-08-24 18:46:03.269557\n"
      ]
     }
    ],
    "source": [
     "#call the function\n",
     "import time\n",
+    "import os\n",
     "from datetime import datetime\n",
     "df = pd.DataFrame(columns=['organism_id', 'year', 'performance', 'performanceId', 'author', 'authordId', 'label', 'period', 'occurency','place'])                        \n",
     "print(\"start\",datetime.now()) \n",
     "# 439 Arsenal\n",
     "# 699 CCAM [Centre culturel André Malraux] - Scène Nationale de Vandoeuvre-lès-Nancy\n",
-    "organismId=\"383\"\n",
+    "organismId=\"512\"\n",
     "# 1744 Pôle sud\n",
     "# 465 Le Manège de Reims\n",
     "# 1914 Carreau forbach  \n",
@@ -813,7 +814,7 @@
     "    except:\n",
     "        print(\"Problem with organismId %s and saison %s\" % (organismId,str(saison)))\n",
     "        raise\n",
-    "df.to_csv('all_10_years_organism_' + organismId + '.csv')\n",
+    "df.to_csv(os.getcwd() + \"/data/all_10_years_organism_\" + organismId + '.csv')\n",
     "\n",
     "print(\"finish\",datetime.now())"
    ]
